--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -60,9 +60,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/navbar/tokens-active.png
+    - assets/images/navbar/tokens-inactive.png
+    - assets/images/navbar/portfolio-active.png
+    - assets/images/navbar/portfolio-inactive.png
+    - assets/images/navbar/wallet-inactive.png
+    - assets/images/property/1.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
